deploy/k8s/r6-stage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lurus-newhub
  namespace: lurus-newhub
  labels:
    app: lurus-newhub
spec:
  type: NodePort
  ports:
    - port: 8850
      targetPort: 3000
      nodePort: 30850
      name: http
  selector:
    app: lurus-newhub
